fix: Fix split card horizontal align
The issue was a regression caused by a CSS selector becoming invalid. When changing the image helper from outputting a `<picture>` to an `<img>`, the existing CSS selector based on `picture` didn't work anymore.

Closes #79

--- a/layouts/partials/modules/split-card.css
+++ b/layouts/partials/modules/split-card.css
@@ -52,7 +52,7 @@
     padding-right: var(--content-padding);
   }
 
-  .split-card--image-right picture {
+  .split-card--image-right img {
     order: 1;
   }
 }
